# VispioAi

./: .env  .env.example  .gitignore  .replit  ADVANCED_ANALYSIS.md  DEPENDENCIES.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  PRODUCTION_READY.md  README.md  SECURITY_GUIDE.md  STREAMLIT_CACHE_FIX.md  STREAMLIT_DEPLOYMENT.md  STREAMLIT_TROUBLESHOOTING.md  app.py  app_fallback.py  check_python_compatibility.py  check_python_version.py  check_requirements.py  clear_cache_and_test.py  clear_streamlit_cache.py  deploy_status.py  deployment_check.py  final_deployment_check.py  fix_imports.py  force_fresh_deploy.py  health_check.py  integration_test.py  packages.txt  pyproject.toml  quick_cache_bust.py  quick_test.py  replit.md  requirements-dev.txt  requirements-lock.txt  requirements.txt  security_check.py  service_health_check.py  setup.sh  simple_test.py  (+9 more)
.streamlit/: config.toml  secrets.toml
services/: __init__.py  audio_fallback.py  audio_service.py  chatbot_fallback.py  chatbot_service.py  gemini_fallback.py  gemini_service.py
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
utils/: image_utils.py
