[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "gtts>=2.5.4",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "streamlit>=1.46.1",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
]
