[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.45.1",
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "pydub>=0.25.1",
    "pygame>=2.6.0",
    "Pillow>=10.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "numpy>=1.26.4",
    "typing-extensions>=4.13.0",
    "packaging>=24.0",
]
